Fix portal subscribe button z-index

--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -58,3 +58,7 @@ fieldset {
 .medium-zoom-image {
   z-index: 5;
 }
+
+#ghost-portal-root{
+  z-index: 4;
+}
