--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 4;
+  z-index: 5;
   background-color: var(--background-color);
   will-change: transform;
   @include transition(transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1));
